--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "cloudinary": "^1.41.3",
+    "concurrently": "^8.2.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
@@ -22,8 +24,9 @@
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.2",
     "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "node-cache": "^5.1.2",
-    "nodemon": "^3.0.1",
+    "nodemon": "^3.1.3",
     "postman": "^0.2.0",
     "sharp": "^0.32.5",
     "uuid": "^9.0.1"
